--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ title: a realtime distributed messaging platform
 <div class="hero-unit">
   <h1>NSQ</h1>
   <p>a realtime distributed messaging platform</p>
-  <iframe src="http://ghbtns.com/github-btn.html?user=bitly&repo=nsq&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110px" height="20px"></iframe>
-  <iframe src="http://ghbtns.com/github-btn.html?user=bitly&repo=nsq&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
+  <iframe src="http://ghbtns.com/github-btn.html?user=nsqio&repo=nsq&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110px" height="20px"></iframe>
+  <iframe src="http://ghbtns.com/github-btn.html?user=nsqio&repo=nsq&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
 </div>
 
 {% capture intro %}{% include intro.md %}{% endcapture %}
