--- a/index.html
+++ b/index.html
@@ -1,14 +1,140 @@
 ---
 layout: default
-title: a realtime distributed messaging platform
+title: A realtime distributed messaging platform
 ---
 
-<div class="hero-unit">
-  <h1>NSQ</h1>
-  <p>a realtime distributed messaging platform</p>
-  <iframe src="http://ghbtns.com/github-btn.html?user=nsqio&repo=nsq&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110px" height="20px"></iframe>
-  <iframe src="http://ghbtns.com/github-btn.html?user=nsqio&repo=nsq&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
+<div class="jumbotron">
+  <div class="container">
+    <h1><img src="{{ site.baseurl }}/static/img/nsq.png"/> NSQ</h1>
+    <p class="subtitle">A realtime distributed messaging platform</p>
+    <iframe src="http://ghbtns.com/github-btn.html?user=nsqio&repo=nsq&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110px" height="20px"></iframe>
+    <iframe src="http://ghbtns.com/github-btn.html?user=nsqio&repo=nsq&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
+    <p><a class="btn btn-default btn-lg" href="{{ site.baseurl }}/overview/quick_start.html" role="button">Get Started</a></p>
+  </div>
 </div>
 
-{% capture intro %}{% include intro.md %}{% endcapture %}
-{{ intro | markdownify }}
+<div class="container">
+  <div class="main">
+    <div class="row">
+      <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="2500">
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <center>
+            <table class="production"><tr>
+            <td align="center"><a href="http://bitly.com"><img src="{{ site.baseurl }}/static/img/bitly_logo.png" width="84"/></a></td>
+            <td align="center"><a href="http://hailocab.com"><img src="{{ site.baseurl }}/static/img/hailo_logo.png" width="62"/></a></td>
+            <td align="center"><a href="http://buzzfeed.com"><img src="{{ site.baseurl }}/static/img/buzzfeed_logo.png" width="115"/></a></td>
+            <td align="center"><a href="http://stripe.com"><img src="{{ site.baseurl }}/static/img/stripe_logo.png" width="120"/></a></td>
+            <td align="center"><a href="http://moz.com"><img src="{{ site.baseurl }}/static/img/moz_logo.png" width="108"/></a></td>
+            <td align="center"><a href="http://docker.com"><img src="{{ site.baseurl }}/static/img/docker_logo.png" width="125"/></a></td>
+            </tr></table>
+            </center>
+          </div>
+          <div class="item">
+            <center>
+            <table class="production"><tr>
+            <td align="center"><a href="http://segment.io"><img src="{{ site.baseurl }}/static/img/segmentio_logo.png" width="70"/></a></td>
+            <td align="center"><a href="http://eventful.com"><img src="{{ site.baseurl }}/static/img/eventful_logo.png" width="95"/></a></td>
+            <td align="center"><a href="http://energyhub.com"><img src="{{ site.baseurl }}/static/img/energyhub_logo.png" width="99"/></a></td>
+            <td align="center"><a href="https://project-fifo.net"><img src="{{ site.baseurl }}/static/img/project_fifo.png" width="97"/></a></td>
+            <td align="center"><a href="http://trendrr.com"><img src="{{ site.baseurl }}/static/img/trendrr_logo.png" width="97"/></a></td>
+            <td align="center"><a href="http://reonomy.com"><img src="{{ site.baseurl }}/static/img/reonomy_logo.png" width="100"/></a></td>
+            </tr></table>
+            </center>
+          </div>
+          <div class="item">
+            <center>
+            <table class="production"><tr>
+            <td align="center"><a href="http://simplereach.com"><img src="{{ site.baseurl }}/static/img/simplereach_logo.png" width="136"/></a></td>
+            <td align="center"><a href="http://hw-ops.com"><img src="{{ site.baseurl }}/static/img/heavy_water.png" width="50"/></a></td>
+            <td align="center"><a href="http://lytics.io"><img src="{{ site.baseurl }}/static/img/lytics.png" width="100"/></a></td>
+            <td align="center"><a href="http://mediaforge.com"><img src="{{ site.baseurl }}/static/img/rakuten.png" width="100"/></a></td>
+            <td align="center"><a href="http://socialradar.com"><img src="{{ site.baseurl }}/static/img/socialradar_logo.png" width="100"/></a></td>
+            <td align="center"><a href="http://wistia.com"><img src="{{ site.baseurl }}/static/img/wistia_logo.png" width="140"/></a></td>
+            </tr></table>
+            </center>
+          </div>
+          <div class="item">
+            <center>
+            <table class="production"><tr>
+            <td align="center"><a href="http://life360.com"><img src="{{ site.baseurl }}/static/img/life360_logo.png" width="100"/></a></td>
+            <td align="center"><a href="http://soundest.com"><img src="{{ site.baseurl }}/static/img/soundest_logo.png" width="120"/></a></td>
+            <td align="center"><a href="http://path.com"><img src="{{ site.baseurl }}/static/img/path_logo.png" width="84"/></a></td>
+            <td align="center"><a href="http://digg.com"><img src="{{ site.baseurl }}/static/img/digg_logo.png" width="100"/></a></td>
+            <td align="center"><a href="http://getweave.com"><img src="{{ site.baseurl }}/static/img/weave_logo.png" width="110"/></a></td>
+            <td align="center"><a href="http://shipwire.com"><img src="{{ site.baseurl }}/static/img/shipwire_logo.png" width="120"/></a></td>
+            </tr></table>
+            </center>
+          </div>
+          <div class="item">
+            <center>
+            <table class="production"><tr>
+            <td align="center"><a href="http://scalabull.com"><img src="{{ site.baseurl }}/static/img/scalabull_logo.png" width="110"/></a></td>
+            <td align="center"><a href="http://augury.com"><img src="{{ site.baseurl }}/static/img/augury_logo.png" width="110"/></a></td>
+            <td align="center"><a href="http://eztable.com"><img src="{{ site.baseurl }}/static/img/eztable_logo.png" width="105"/></a></td>
+            <td align="center"><a href="http://www.dotabuff.com"><img src="{{ site.baseurl }}/static/img/dotabuff_logo.png" width="105"/></a></td>
+            <td align="center"><a href="https://www.fastly.com"><img src="{{ site.baseurl }}/static/img/fastly_logo.png" width="105"/></a></td>
+            </tr></table>
+            </center>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <h2><i class="fa fa-th"></i> Distributed</h2>
+        <p class="desc">
+{% capture distributed %}
+**NSQ** promotes *distributed* and *decentralized* topologies without single points of failure,
+enabling fault tolerance and high availability coupled with a reliable message delivery
+guarantee.  See [features & guarantees][features_guarantees].
+
+[features_guarantees]: {{ site.baseurl }}/overview/features_and_guarantees.html
+{% endcapture %}
+{{ distributed | markdownify }}</p>
+      </div>
+      <div class="col-md-3">
+        <h2><i class="fa fa-globe"></i> Scalable</h2>
+        <p class="desc">
+{% capture scalable %}
+**NSQ** [scales horizontally][topology], without any centralized brokers.  Built-in discovery
+simplifies the addition of nodes to the cluster.  Supports both pub-sub and load-balanced message
+delivery.  It's [fast][performance], too.
+
+[topology]: {{ site.baseurl }}/deployment/topology_patterns.html
+[performance]: {{ site.baseurl }}/overview/performance.html
+{% endcapture %}
+{{ scalable | markdownify }}</p>
+      </div>
+      <div class="col-md-3">
+        <h2><i class="fa fa-cogs"></i> Ops Friendly</h2>
+        <p class="desc">
+{% capture operations %}
+**NSQ** is easy to [configure and deploy][production] and comes bundled with an
+admin UI.  Binaries have no runtime dependencies and we provide
+[pre-compiled releases][installing] for linux and darwin as well as an official
+[Docker image][docker].
+
+[docker]: {{ site.baseurl }}/deployment/docker.html
+[installing]: {{ site.baseurl }}/deployment/installing.html
+[production]: {{ site.baseurl }}/deployment/production.html
+{% endcapture %}
+{{ operations | markdownify }}</p>
+      </div>
+      <div class="col-md-3">
+        <h2><i class="fa fa-code"></i> Integrated</h2>
+        <p class="desc">
+{% capture clientlibs %}
+Official Go and Python libraries are available as well as many community supported libraries
+for most major languages (see [client libraries][client_libraries]). If you're interested in
+[building your own][build_cl], there's a [protocol spec][protocol].
+
+[build_cl]: {{ site.baseurl }}/clients/building_client_libraries.html
+[protocol]: {{ site.baseurl }}/clients/tcp_protocol_spec.html
+[client_libraries]: {{ site.baseurl }}/clients/client_libraries.html
+{% endcapture %}
+{{ clientlibs | markdownify }}</p>
+      </div>
+    </div>
+  </div>
+</div>
