--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ title: A realtime distributed messaging platform
             <td align="center"><a href="http://eztable.com"><img src="{{ site.baseurl }}/static/img/eztable_logo.png" width="105"/></a></td>
             <td align="center"><a href="http://www.dotabuff.com"><img src="{{ site.baseurl }}/static/img/dotabuff_logo.png" width="105"/></a></td>
             <td align="center"><a href="https://www.fastly.com"><img src="{{ site.baseurl }}/static/img/fastly_logo.png" width="105"/></a></td>
+            <td align="center"><a href="https://talky.io"><img src="{{ site.baseurl }}/static/img/talky_logo.png" width="110"></a></td>
             </tr></table>
             </center>
           </div>
