--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@ title: A realtime distributed messaging platform
             </tr></table>
             </center>
           </div>
+          <div class="item">
+            <center>
+            <table class="production"><tr>
+            <td align="center"><a href="https://groupme.com"><img src="{{ site.baseurl }}/static/img/groupme_logo.png" width="110"/></a></td>
+            </tr></table>
+            </center>
+          </div>
         </div>
       </div>
     </div>
