--- a/index.html
+++ b/index.html
@@ -118,10 +118,9 @@ delivery.  It's [fast][performance], too.
         <h2><i class="fa fa-cogs"></i> Ops Friendly</h2>
         <p class="desc">
 {% capture operations %}
-**NSQ** is easy to [configure and deploy][production] and comes bundled with an
-admin UI.  Binaries have no runtime dependencies and we provide
-[pre-compiled releases][installing] for linux and darwin as well as an official
-[Docker image][docker].
+**NSQ** is easy to [configure and deploy][production] and comes bundled with an admin UI. Binaries
+have no runtime dependencies and we provide [pre-compiled releases][installing] for linux, darwin,
+freebsd and windows as well as an official [Docker image][docker].
 
 [docker]: {{ site.baseurl }}/deployment/docker.html
 [installing]: {{ site.baseurl }}/deployment/installing.html
