add wiredcraft and deis

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@ title: A realtime distributed messaging platform
             <center>
             <table class="production"><tr>
             <td align="center"><a href="https://groupme.com"><img src="{{ site.baseurl }}/static/img/groupme_logo.png" width="110"/></a></td>
+            <td align="center"><a href="https://deis.com"><img src="{{ site.baseurl }}/static/img/deis_logo.svg" width="75"/></a></td>
+            <td align="center"><a href="https://wiredcraft.com"><img src="{{ site.baseurl }}/static/img/wiredcraft_logo.jpg" width="110"/></a></td>
             </tr></table>
             </center>
           </div>
