--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ title: A realtime distributed messaging platform
             <td align="center"><a href="https://groupme.com"><img src="{{ site.baseurl }}/static/img/groupme_logo.png" width="110"/></a></td>
             <td align="center"><a href="https://deis.com"><img src="{{ site.baseurl }}/static/img/deis_logo.svg" width="75"/></a></td>
             <td align="center"><a href="https://wiredcraft.com"><img src="{{ site.baseurl }}/static/img/wiredcraft_logo.jpg" width="110"/></a></td>
+            <td align="center"><a href="https://sproutsocial.com"><img src="{{ site.baseurl }}/static/img/sproutsocial_logo.png" width="90"/></a></td>
             </tr></table>
             </center>
           </div>
