update segment logo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: A realtime distributed messaging platform
           <div class="item">
             <center>
             <table class="production"><tr>
-            <td align="center"><a href="http://segment.io"><img src="{{ site.baseurl }}/static/img/segmentio_logo.png" width="70"/></a></td>
+            <td align="center"><a href="http://segment.com"><img src="{{ site.baseurl }}/static/img/segment_logo.png" width="70"/></a></td>
             <td align="center"><a href="http://eventful.com"><img src="{{ site.baseurl }}/static/img/eventful_logo.png" width="95"/></a></td>
             <td align="center"><a href="http://energyhub.com"><img src="{{ site.baseurl }}/static/img/energyhub_logo.png" width="99"/></a></td>
             <td align="center"><a href="https://project-fifo.net"><img src="{{ site.baseurl }}/static/img/project_fifo.png" width="97"/></a></td>
