update github buttons

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ title: A realtime distributed messaging platform
   <div class="container">
     <h1><img src="{{ site.baseurl }}/static/img/nsq.png"/> NSQ</h1>
     <p class="subtitle">A realtime distributed messaging platform</p>
-    <iframe src="http://ghbtns.com/github-btn.html?user=nsqio&repo=nsq&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110px" height="20px"></iframe>
-    <iframe src="http://ghbtns.com/github-btn.html?user=nsqio&repo=nsq&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
+    <a class="github-button" href="https://github.com/nsqio/nsq" data-size="large" data-show-count="true" aria-label="Star nsqio/nsq on GitHub">Star</a>
+    <a class="github-button" href="https://github.com/nsqio/nsq/subscription" data-size="large" data-show-count="true" aria-label="Watch nsqio/nsq on GitHub">Watch</a>
     <p><a class="btn btn-default btn-lg" href="{{ site.baseurl }}/overview/quick_start.html" role="button">Get Started</a></p>
   </div>
 </div>
