Add Fandom logo
Fandom proudly used NSQ in production services.

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ title: A realtime distributed messaging platform
             <td align="center"><a href="https://deis.com"><img src="{{ site.baseurl }}/static/img/deis_logo.svg" width="75"/></a></td>
             <td align="center"><a href="https://wiredcraft.com"><img src="{{ site.baseurl }}/static/img/wiredcraft_logo.jpg" width="110"/></a></td>
             <td align="center"><a href="https://sproutsocial.com"><img src="{{ site.baseurl }}/static/img/sproutsocial_logo.png" width="90"/></a></td>
+            <td align="center"><a href="http://fandom.wikia.com"><img src="{{ site.baseurl }}/static/img/fandom_logo.svg" width="230"/></a></td>
             </tr></table>
             </center>
           </div>
