Add Gitee.com logo

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ title: A realtime distributed messaging platform
             <td align="center"><a href="https://wiredcraft.com"><img src="{{ site.baseurl }}/static/img/wiredcraft_logo.jpg" width="110"/></a></td>
             <td align="center"><a href="https://sproutsocial.com"><img src="{{ site.baseurl }}/static/img/sproutsocial_logo.png" width="90"/></a></td>
             <td align="center"><a href="http://fandom.wikia.com"><img src="{{ site.baseurl }}/static/img/fandom_logo.svg" width="230"/></a></td>
+            <td align="center"><a href="https://gitee.com"><img src="{{ site.baseurl }}/static/img/gitee_logo.svg" width="145"/></a></td>
             </tr></table>
             </center>
           </div>
