append the SmartServing logo into the production section

--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@ title: A realtime distributed messaging platform
             </tr></table>
             </center>
           </div>
+          <div class="item">
+            <center>
+            <table class="production"><tr>
+            <td align="center"><a href="https://n1q.com/"><img src="{{ site.baseurl }}/static/img/smartserving_logo.png" width="165"/></a></td>
+            </tr></table>
+            </center>
+          </div>
         </div>
       </div>
     </div>
