--- a/index.html
+++ b/index.html
@@ -21,58 +21,58 @@ title: A realtime distributed messaging platform
           <div class="item active">
             <center>
             <table class="production"><tr>
-            <td align="center"><a href="http://bitly.com"><img src="{{ site.baseurl }}/static/img/bitly_logo.png" width="84"/></a></td>
-            <td align="center"><a href="http://hailocab.com"><img src="{{ site.baseurl }}/static/img/hailo_logo.png" width="62"/></a></td>
-            <td align="center"><a href="http://buzzfeed.com"><img src="{{ site.baseurl }}/static/img/buzzfeed_logo.png" width="115"/></a></td>
-            <td align="center"><a href="http://stripe.com"><img src="{{ site.baseurl }}/static/img/stripe_logo.png" width="120"/></a></td>
-            <td align="center"><a href="http://moz.com"><img src="{{ site.baseurl }}/static/img/moz_logo.png" width="108"/></a></td>
-            <td align="center"><a href="http://docker.com"><img src="{{ site.baseurl }}/static/img/docker_logo.png" width="125"/></a></td>
+            <td align="center"><a href="https://bitly.com"><img src="{{ site.baseurl }}/static/img/bitly_logo.png" width="84"/></a></td>
+            <td align="center"><a href="https://hailocab.com"><img src="{{ site.baseurl }}/static/img/hailo_logo.png" width="62"/></a></td>
+            <td align="center"><a href="https://buzzfeed.com"><img src="{{ site.baseurl }}/static/img/buzzfeed_logo.png" width="115"/></a></td>
+            <td align="center"><a href="https://stripe.com"><img src="{{ site.baseurl }}/static/img/stripe_logo.png" width="120"/></a></td>
+            <td align="center"><a href="https://moz.com"><img src="{{ site.baseurl }}/static/img/moz_logo.png" width="108"/></a></td>
+            <td align="center"><a href="https://docker.com"><img src="{{ site.baseurl }}/static/img/docker_logo.png" width="125"/></a></td>
             </tr></table>
             </center>
           </div>
           <div class="item">
             <center>
             <table class="production"><tr>
-            <td align="center"><a href="http://segment.com"><img src="{{ site.baseurl }}/static/img/segment_logo.png" width="70"/></a></td>
-            <td align="center"><a href="http://eventful.com"><img src="{{ site.baseurl }}/static/img/eventful_logo.png" width="95"/></a></td>
-            <td align="center"><a href="http://energyhub.com"><img src="{{ site.baseurl }}/static/img/energyhub_logo.png" width="99"/></a></td>
+            <td align="center"><a href="https://segment.com"><img src="{{ site.baseurl }}/static/img/segment_logo.png" width="70"/></a></td>
+            <td align="center"><a href="https://eventful.com"><img src="{{ site.baseurl }}/static/img/eventful_logo.png" width="95"/></a></td>
+            <td align="center"><a href="https://energyhub.com"><img src="{{ site.baseurl }}/static/img/energyhub_logo.png" width="99"/></a></td>
             <td align="center"><a href="https://project-fifo.net"><img src="{{ site.baseurl }}/static/img/project_fifo.png" width="97"/></a></td>
-            <td align="center"><a href="http://trendrr.com"><img src="{{ site.baseurl }}/static/img/trendrr_logo.png" width="97"/></a></td>
-            <td align="center"><a href="http://reonomy.com"><img src="{{ site.baseurl }}/static/img/reonomy_logo.png" width="100"/></a></td>
+            <td align="center"><a href="https://trendrr.com"><img src="{{ site.baseurl }}/static/img/trendrr_logo.png" width="97"/></a></td>
+            <td align="center"><a href="https://reonomy.com"><img src="{{ site.baseurl }}/static/img/reonomy_logo.png" width="100"/></a></td>
             </tr></table>
             </center>
           </div>
           <div class="item">
             <center>
             <table class="production"><tr>
-            <td align="center"><a href="http://simplereach.com"><img src="{{ site.baseurl }}/static/img/simplereach_logo.png" width="136"/></a></td>
-            <td align="center"><a href="http://hw-ops.com"><img src="{{ site.baseurl }}/static/img/heavy_water.png" width="50"/></a></td>
-            <td align="center"><a href="http://lytics.io"><img src="{{ site.baseurl }}/static/img/lytics.png" width="100"/></a></td>
-            <td align="center"><a href="http://mediaforge.com"><img src="{{ site.baseurl }}/static/img/rakuten.png" width="100"/></a></td>
-            <td align="center"><a href="http://socialradar.com"><img src="{{ site.baseurl }}/static/img/socialradar_logo.png" width="100"/></a></td>
-            <td align="center"><a href="http://wistia.com"><img src="{{ site.baseurl }}/static/img/wistia_logo.png" width="140"/></a></td>
+            <td align="center"><a href="https://simplereach.com"><img src="{{ site.baseurl }}/static/img/simplereach_logo.png" width="136"/></a></td>
+            <td align="center"><a href="https://hw-ops.com"><img src="{{ site.baseurl }}/static/img/heavy_water.png" width="50"/></a></td>
+            <td align="center"><a href="https://lytics.io"><img src="{{ site.baseurl }}/static/img/lytics.png" width="100"/></a></td>
+            <td align="center"><a href="https://mediaforge.com"><img src="{{ site.baseurl }}/static/img/rakuten.png" width="100"/></a></td>
+            <td align="center"><a href="https://socialradar.com"><img src="{{ site.baseurl }}/static/img/socialradar_logo.png" width="100"/></a></td>
+            <td align="center"><a href="https://wistia.com"><img src="{{ site.baseurl }}/static/img/wistia_logo.png" width="140"/></a></td>
             </tr></table>
             </center>
           </div>
           <div class="item">
             <center>
             <table class="production"><tr>
-            <td align="center"><a href="http://life360.com"><img src="{{ site.baseurl }}/static/img/life360_logo.png" width="100"/></a></td>
-            <td align="center"><a href="http://soundest.com"><img src="{{ site.baseurl }}/static/img/soundest_logo.png" width="120"/></a></td>
-            <td align="center"><a href="http://path.com"><img src="{{ site.baseurl }}/static/img/path_logo.png" width="84"/></a></td>
-            <td align="center"><a href="http://digg.com"><img src="{{ site.baseurl }}/static/img/digg_logo.png" width="100"/></a></td>
-            <td align="center"><a href="http://getweave.com"><img src="{{ site.baseurl }}/static/img/weave_logo.png" width="110"/></a></td>
-            <td align="center"><a href="http://shipwire.com"><img src="{{ site.baseurl }}/static/img/shipwire_logo.png" width="120"/></a></td>
+            <td align="center"><a href="https://life360.com"><img src="{{ site.baseurl }}/static/img/life360_logo.png" width="100"/></a></td>
+            <td align="center"><a href="https://soundest.com"><img src="{{ site.baseurl }}/static/img/soundest_logo.png" width="120"/></a></td>
+            <td align="center"><a href="https://path.com"><img src="{{ site.baseurl }}/static/img/path_logo.png" width="84"/></a></td>
+            <td align="center"><a href="https://digg.com"><img src="{{ site.baseurl }}/static/img/digg_logo.png" width="100"/></a></td>
+            <td align="center"><a href="https://getweave.com"><img src="{{ site.baseurl }}/static/img/weave_logo.png" width="110"/></a></td>
+            <td align="center"><a href="https://shipwire.com"><img src="{{ site.baseurl }}/static/img/shipwire_logo.png" width="120"/></a></td>
             </tr></table>
             </center>
           </div>
           <div class="item">
             <center>
             <table class="production"><tr>
-            <td align="center"><a href="http://scalabull.com"><img src="{{ site.baseurl }}/static/img/scalabull_logo.png" width="110"/></a></td>
-            <td align="center"><a href="http://augury.com"><img src="{{ site.baseurl }}/static/img/augury_logo.png" width="110"/></a></td>
-            <td align="center"><a href="http://eztable.com"><img src="{{ site.baseurl }}/static/img/eztable_logo.png" width="105"/></a></td>
-            <td align="center"><a href="http://www.dotabuff.com"><img src="{{ site.baseurl }}/static/img/dotabuff_logo.png" width="105"/></a></td>
+            <td align="center"><a href="https://scalabull.com"><img src="{{ site.baseurl }}/static/img/scalabull_logo.png" width="110"/></a></td>
+            <td align="center"><a href="https://augury.com"><img src="{{ site.baseurl }}/static/img/augury_logo.png" width="110"/></a></td>
+            <td align="center"><a href="https://eztable.com"><img src="{{ site.baseurl }}/static/img/eztable_logo.png" width="105"/></a></td>
+            <td align="center"><a href="https://www.dotabuff.com"><img src="{{ site.baseurl }}/static/img/dotabuff_logo.png" width="105"/></a></td>
             <td align="center"><a href="https://www.fastly.com"><img src="{{ site.baseurl }}/static/img/fastly_logo.png" width="105"/></a></td>
             <td align="center"><a href="https://talky.io"><img src="{{ site.baseurl }}/static/img/talky_logo.png" width="110"></a></td>
             </tr></table>
@@ -85,7 +85,7 @@ title: A realtime distributed messaging platform
             <td align="center"><a href="https://deis.com"><img src="{{ site.baseurl }}/static/img/deis_logo.svg" width="75"/></a></td>
             <td align="center"><a href="https://wiredcraft.com"><img src="{{ site.baseurl }}/static/img/wiredcraft_logo.jpg" width="110"/></a></td>
             <td align="center"><a href="https://sproutsocial.com"><img src="{{ site.baseurl }}/static/img/sproutsocial_logo.png" width="90"/></a></td>
-            <td align="center"><a href="http://fandom.wikia.com"><img src="{{ site.baseurl }}/static/img/fandom_logo.svg" width="230"/></a></td>
+            <td align="center"><a href="https://fandom.wikia.com"><img src="{{ site.baseurl }}/static/img/fandom_logo.svg" width="230"/></a></td>
             <td align="center"><a href="https://gitee.com"><img src="{{ site.baseurl }}/static/img/gitee_logo.svg" width="145"/></a></td>
             </tr></table>
             </center>
