add bytedance; add disclaimer

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ title: A realtime distributed messaging platform
           <div class="item">
             <center>
             <table class="production"><tr>
+            <td align="center"><a href="https://bytedance.com"><img src="{{ site.baseurl }}/static/images/bytedance_logo.png" width="140"/></a></td>
             <td align="center"><a href="https://n1q.com/"><img src="{{ site.baseurl }}/static/img/smartserving_logo.png" width="165"/></a></td>
             </tr></table>
             </center>
