production users - fix broken img & link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: A realtime distributed messaging platform
             <center>
             <table class="production"><tr>
             <td align="center"><a href="https://eventful.com"><img src="{{ site.baseurl }}/static/img/eventful_logo.png" width="95"/></a></td>
-            <td align="center"><a href="https://energyhub.com"><img src="{{ site.baseurl }}/static/img/energyhub_logo.png" width="99"/></a></td>
+            <td align="center"><a href="https://www.energyhub.com"><img src="{{ site.baseurl }}/static/img/energyhub_logo.png" width="99"/></a></td>
             <td align="center"><a href="https://project-fifo.net"><img src="{{ site.baseurl }}/static/img/project_fifo.png" width="97"/></a></td>
             <td align="center"><a href="https://trendrr.com"><img src="{{ site.baseurl }}/static/img/trendrr_logo.png" width="97"/></a></td>
             <td align="center"><a href="https://reonomy.com"><img src="{{ site.baseurl }}/static/img/reonomy_logo.png" width="100"/></a></td>
@@ -83,7 +83,7 @@ title: A realtime distributed messaging platform
             <table class="production"><tr>
             <td align="center"><a href="https://fandom.wikia.com"><img src="{{ site.baseurl }}/static/img/fandom_logo.svg" width="230"/></a></td>
             <td align="center"><a href="https://gitee.com"><img src="{{ site.baseurl }}/static/img/gitee_logo.svg" width="145"/></a></td>
-            <td align="center"><a href="https://bytedance.com"><img src="{{ site.baseurl }}/static/images/bytedance_logo.png" width="140"/></a></td>
+            <td align="center"><a href="https://bytedance.com"><img src="{{ site.baseurl }}/static/img/bytedance_logo.png" width="140"/></a></td>
             </tr></table>
             </center>
           </div>
