--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ title: A realtime distributed messaging platform
             <td align="center"><a href="https://fandom.wikia.com"><img src="{{ site.baseurl }}/static/img/fandom_logo.svg" width="230"/></a></td>
             <td align="center"><a href="https://gitee.com"><img src="{{ site.baseurl }}/static/img/gitee_logo.svg" width="145"/></a></td>
             <td align="center"><a href="https://bytedance.com"><img src="{{ site.baseurl }}/static/img/bytedance_logo.png" width="140"/></a></td>
+            <td align="center"><a href="https://tokopedia.com"><img src="{{ site.baseurl }}/static/img/tokopedia_logo.svg" width="145"/></a></td>
             </tr></table>
             </center>
           </div>
