Add Kuafood(夸父炸串) Logo

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ title: A realtime distributed messaging platform
             <td align="center"><a href="https://gitee.com"><img src="{{ site.baseurl }}/static/img/gitee_logo.svg" width="145"/></a></td>
             <td align="center"><a href="https://bytedance.com"><img src="{{ site.baseurl }}/static/img/bytedance_logo.png" width="140"/></a></td>
             <td align="center"><a href="https://tokopedia.com"><img src="{{ site.baseurl }}/static/img/tokopedia_logo.svg" width="145"/></a></td>
+            <td align="center"><a href="https://www.kuafood.com"><img src="{{ site.baseurl }}/static/img/kuafood_logo.png" width="145"/></a></td>
             </tr></table>
             </center>
           </div>
