add useinsider logo

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ title: A realtime distributed messaging platform
             <td align="center"><a href="https://www.energyhub.com"><img src="{{ site.baseurl }}/static/img/energyhub_logo.png" width="99"/></a></td>
             <td align="center"><a href="https://project-fifo.net"><img src="{{ site.baseurl }}/static/img/project_fifo.png" width="97"/></a></td>
             <td align="center"><a href="https://reonomy.com"><img src="{{ site.baseurl }}/static/img/reonomy_logo.png" width="100"/></a></td>
+            <td align="center"><a href="https://www.useinsider.com"><img src="{{ site.baseurl }}/static/img/insider_logo_dark.svg" width="120"/></a></td>
             </tr></table>
             </center>
           </div>
